# TinyModels

./: LICENSE  README.md  pyproject.toml  setup.py
tinymodels/: __init__.py  pdfParser.py
