[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TinyModels"
version = "0.1.0"
description = "A Python library for efficiently processing PDF files."
authors = [{name = "Juan Olano", email = "juan_olano@yahoo.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["pdf", "text extraction", "pdf processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
]
[project.urls]
homepage = "https://github.com/jcolano/TinyModels"
documentation = "https://github.com/jcolano/TinyModels#readme"
repository = "https://github.com/jcolano/TinyModels"
